// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with enableBackButton renders correctly 1`] = `
<Component
  flex={1}
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#E6E8EC"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={240}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <Connect(Translate(StepsList))
      contactStageId="3"
      organization={
        Object {
          "id": "4234234",
        }
      }
      receiverId="252342354234"
    />
  </ParallaxScrollView>
  <BottomButton
    onPress={[Function]}
    text="CREATE YOUR OWN STEP"
  />
  <Connect(BackButton)
    absolute={true}
    customNavigate={[Function]}
  />
</Component>
`;

exports[`without enableBackButton renders correctly 1`] = `
<Component
  flex={1}
>
  <ParallaxScrollView
    backgroundColor="#007398"
    backgroundScrollSpeed={5}
    contentBackgroundColor="#E6E8EC"
    contentContainerStyle={null}
    fadeOutForeground={true}
    onChangeHeaderVisibility={[Function]}
    outputScaleValue={5}
    parallaxHeaderHeight={240}
    renderBackground={[Function]}
    renderForeground={[Function]}
    renderParallaxHeader={[Function]}
    renderScrollComponent={[Function]}
    renderStickyHeader={[Function]}
    stickyHeaderHeight={65}
  >
    <Connect(Translate(StepsList))
      contactStageId="3"
      organization={
        Object {
          "id": "4234234",
        }
      }
      receiverId="252342354234"
    />
  </ParallaxScrollView>
  <BottomButton
    onPress={[Function]}
    text="CREATE YOUR OWN STEP"
  />
</Component>
`;
